starting compiler work

--- a/CulebraLang.csproj
+++ b/CulebraLang.csproj
@@ -5,6 +5,7 @@
     <TargetFramework>net6.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <PublishSingleFile>false</PublishSingleFile>
+    <PublishAot>true</PublishAot>
 
     <Version>0.1.1</Version>
 
@@ -13,7 +14,8 @@
     <PackageOutputPath>./nupkg</PackageOutputPath>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
 
-
+     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+     <NoWarn>$(NoWarn);SYSLIB0011</NoWarn>
   </PropertyGroup>
 
   <ItemGroup>
